# solana-evm-nft-bridge-relayer

./: .env.example  .gitignore  Cargo.toml  README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  routes.rs  service.rs
crates/evm/: Cargo.toml
crates/evm/src/: calls.rs  config.rs  evm_events.rs  evm_txs.rs  lib.rs  provider_type.rs
crates/requests/: Cargo.toml
crates/requests/src/: endpoints.rs  errors.rs  lib.rs  pending.rs  types.rs
crates/solana/: Cargo.toml
crates/solana/idls/: solana_bridge.json
crates/solana/src/: config.rs  lib.rs  read_account.rs  sol_events.rs  sol_txs.rs
crates/storage/: Cargo.toml
crates/storage/src/: db.rs  errors.rs  keys.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: functions.rs  lib.rs  types.rs
