[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GNU"
authors = ["https://github.com/Arilucea"]
description = "Solana to evm compatible bridge"
repository = "https://github.com/Arilucea/Bridge-Relayer"

[workspace]
resolver = "2"
members = [
    "bin/bridge_relayer", "crates/api", "crates/evm", "crates/requests", "crates/solana",
    "crates/storage", "crates/requests", "crates/types"]

[workspace.dependencies]
storage = { path = "crates/storage" }
api = { path = "crates/api" }
solana = { path = "crates/solana" }
evm = { path = "crates/evm" }
requests = { path = "crates/requests" }
types = { path = "crates/types" }

# Async
tokio = { version = "1.44.1", features = ["full"] }
futures-util = "0.3"

# API
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["cors"] }

# Storage
rocksdb = "0.23.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

# Errors
eyre = "0.6.12"
thiserror = "2"

# Config
dotenvy = "0.15.7"
envy = "0.4.2"

# Logging
log = "0.4"
env_logger = "0.11.6"

# EVM
alloy = { version = "0.12.1", features = ["full"] }
bs58 = "0.5.1"

# Solana
solana-client = "2.2.0"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
solana-transaction-status = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
borsh = {version = "1.5.5", features = ["derive"]}
mpl-token-metadata = "5.1.0"
anchor-lang = "0.31.0"
anchor-client = { version = "0.31.0", features = ["async"] }
base64 = "0.22.1"            

# Test
tempfile = "3.17.1"

