[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
storage = { workspace = true }
requests = { workspace = true }
types = { workspace = true }
evm = { workspace = true }
solana = { workspace = true }

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
log.workspace = true
tower-http.workspace = true