[package]
name = "solana"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
types = {workspace = true}
storage = {workspace = true}

serde_json.workspace = true
serde.workspace = true
eyre.workspace = true
tokio.workspace = true
log.workspace = true
futures-util.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
solana-program.workspace = true
solana-transaction-status.workspace = true
spl-associated-token-account.workspace = true
spl-token.workspace = true
borsh.workspace = true
mpl-token-metadata.workspace = true
anchor-lang.workspace = true
anchor-client.workspace = true
base64.workspace = true