[package]
name = "storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Bridge storage using RocksDB"

[dependencies]
rocksdb.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true