[package]
name = "types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
log.workspace = true
alloy.workspace = true
thiserror.workspace = true
tokio.workspace = true
tempfile.workspace = true
eyre.workspace = true

storage = { workspace = true }

